--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
-    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="fullPage">
