update previous client

--- a/index.html
+++ b/index.html
@@ -228,14 +228,101 @@
 
       <!-- START PREVIOUS CLIENT SECTION -->
       <section class="vertical-scrolling s4">
-        <div class="col-lg-12 p-0 my-auto">
+        <div class="col-lg-12 p-0">
           <img src="./img/img-header-prev-back.png" alt="prevback" class="img-back" />
           <div class="col-4 mx-auto">
             <img src="./img/img-header-prev.png" alt="why" class="img-fluid img-head-prev" />
           </div>
         </div>
+        <div class="container">
+          <div class="row g-1 row-prev">
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-angkasa.png" alt="angkasa" class="img-fluid img-angkasa" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-satria.png" alt="satria" class="img-fluid img-satria" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-pnm.png" alt="pnm" class="img-fluid img-pnm" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-pln.png" alt="pln" class="img-fluid img-pln" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-ojk.png" alt="ojk" class="img-fluid img-ojk" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-mega.png" alt="mega" class="img-fluid img-mega" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-pertamina.png" alt="pertamina" class="img-fluid img-pertamina" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-aero.png" alt="aero" class="img-fluid img-aero" />
+            </div>
+            <div class="col-prev col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-idx.png" alt="idx" class="img-fluid img-idx" />
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <span class="text-partner">Official Partner :</span>
+            </div>
+          </div>
+          <div class="row g-1 mt-2 d-flex justify-content-center align-items-center">
+            <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                <img src="img/img-client-g20.png" alt="g20" class="img-g20" />
+              </div>
+              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                <img src="img/img-client-wbaf.png" alt="wbaf" class="img-wbaf" />
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- START PREVIOUS CLIENT SECTION -->
+
+      <!-- START PREVIOUS CLIENT SECTION -->
+      <section class="vertical-scrolling s5">
+        <div class="col-lg-12 p-0">
+          <img src="./img/img-header-financial-back.png" alt="finback" class="img-back" />
+          <div class="col-4 mx-auto">
+            <img src="./img/img-header-financial.png" alt="why" class="img-fluid img-head-prev" />
+          </div>
+        </div>
+        <div class="container">
+          <div class="row g-1">
+            <div class="col-sm-4 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <img src="img/img-client-angkasa.png" alt="angkasa" class="img-angkasa" />
+              <img src="img/img-satria.png" alt="satria" class="img-satria" />
+              <img src="img/img-client-pnm.png" alt="pnm" class="img-pnm" />
+              <img src="img/img-client-pln.png" alt="pln" class="img-pln" />
+              <img src="img/img-client-ojk.png" alt="ojk" class="img-ojk" />
+              <img src="img/img-client-mega.png" alt="mega" class="img-mega" />
+              <img src="img/img-client-pertamina.png" alt="pertamina" class="img-pertamina" />
+              <img src="img/img-client-aero.png" alt="aero" class="img-aero" />
+              <img src="img/img-client-idx.png" alt="idx" class="img-idx" />
+            </div>
+          </div>
+          <div class="row mt-2">
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <span class="text-partner">Official Partner :</span>
+            </div>
+          </div>
+          <div class="row g-1 mt-2 d-flex justify-content-center align-items-center">
+            <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                <img src="img/img-client-g20.png" alt="g20" class="img-g20" />
+              </div>
+              <div class="col-6 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                <img src="img/img-client-wbaf.png" alt="wbaf" class="img-wbaf" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- END PREVIOUS CLIENT SECTION -->
     </div>
 
     <!-- FULL PAGE JS -->
@@ -264,7 +351,7 @@
         autoScrolling: true,
         //navigation: true,
         sectionSelector: ".vertical-scrolling",
-        anchors: ["main", "whatwedo", "whyus", "previousclient"],
+        anchors: ["main", "whatwedo", "whyus", "previousclient", "financialinsight"],
       });
 
       function hideTitle(x) {
