--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <h1 class="display-4 col-sm-9 col-md-9 col-lg-9 mx-auto">WE DELIVER SOUND & SPECIALIZE SERVICE</h1>
           <p class="lead col-sm-7 col-md-7 col-lg-7 mx-auto">Our strength lies in our ability to help clients solving their financial needs and grabbing investment opportunity.</p>
-          <div class="btn-scroll col-1 col-sm-1 col-md-1 col-lg-1 mx-auto">
+          <div class="btn-scroll col-1 col-sm-1 col-md-1 col-lg-1 mx-auto d-flex justify-content-center">
             <a href="#whatwedo">
               <img src="./img/btn-arrow-down.png" alt="arrow" />
             </a>
