--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
       <!-- START PREVIOUS CLIENT SECTION -->
       <section class="vertical-scrolling s4">
-        <div class="col-lg-12 p-0">
+        <div class="col-lg-12">
           <img src="./img/img-header-prev-back.png" alt="prevback" class="img-back" />
           <div class="col-4 mx-auto">
             <img src="./img/img-header-prev.png" alt="why" class="img-fluid img-head-prev" />
